--- a/src/App.css
+++ b/src/App.css
@@ -42,17 +42,18 @@
   }
 }
 
-/* עיצוב עבור רכיב Manager */
+
 .Manager {
   padding: 20px;
   background: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  width: 90%;
-  max-width: 1200px;
+  width: 120%;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
-/* עיצוב עבור כל רכיב כרטיס */
+
 .item {
   display: flex;
   align-items: center;
@@ -60,34 +61,39 @@
   padding: 15px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
-  background-color: #ffffff;
+  background-color: #e1e1e1; /*#ffffff;*/
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.item_details {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .item:last-child {
   margin-bottom: 0;
 }
 
-/* עיצוב לשם הפוקימון */
 .item_name {
-  flex: 1;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: bold;
-  color: #333333;
-  margin-right: 15px;
+  color: #8ec627;
+  margin-bottom: 5px;
 }
 
-/* עיצוב לתמונה */
+
 .item_img {
-  width: 100px;
+  width: 200px;
   height: auto;
   border-radius: 4px;
   border: 1px solid #ddd;
+  margin-right: 15px;
 }
 
-/* עיצוב לתאריך */
+
 .date {
   font-size: 14px;
-  color: #555555;
-  margin-left: 20px;
+  color: #8ec627;
 }
